--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/check": "^0.7.0",
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource-variable/onest": "^5.0.4",
+    "@fullhuman/postcss-purgecss": "^6.0.0",
     "astro": "^4.10.2",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5"
